--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-body {
-  font-family: "Roboto", sans-serif;
-  background-color: #ffffff;
-}
 :root {
   --text-color-logo-dark: #000000;
   --text-color-hover: #2196f3;
@@ -14,7 +10,12 @@ body {
   --background-color-blue: #2196f3;
 }
 
-.logo {
+body {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  background-color: var(--background-color-main);
+}
+==========header========== .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -37,7 +38,6 @@ body {
   list-style: none;
 }
 .menu-link {
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -58,7 +58,6 @@ body {
 }
 
 .contact-link {
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -75,9 +74,7 @@ body {
 :current {
   color: var(--text-color-hover);
 }
-
-.descisions {
-  font-style: normal;
+==========hero========== .descisions {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -89,7 +86,6 @@ body {
 }
 
 .order-btm {
-  font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.875;
@@ -114,7 +110,6 @@ body {
 }
 
 .type-selection-btm {
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -132,7 +127,6 @@ body {
   list-style: none;
 }
 .features-item {
-  font-style: normal;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -142,7 +136,6 @@ body {
   color: var(--text-color-main);
 }
 .detailed-features {
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -151,7 +144,6 @@ body {
 }
 
 .what-we-do {
-  font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
@@ -167,7 +159,6 @@ body {
   background: var(--background-color-gray);
 }
 .our-team {
-  font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
@@ -190,7 +181,6 @@ body {
 }
 
 .team-member-name {
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -199,7 +189,6 @@ body {
   color: var(--text-color-main);
 }
 .team-member-position {
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.19px;
@@ -214,7 +203,6 @@ body {
 }
 .logo-futer {
   font-family: Raleway, sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
@@ -224,7 +212,6 @@ body {
 }
 
 .link-adress {
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -237,7 +224,6 @@ body {
   list-style: none;
 }
 .footer-contacts-item {
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -251,7 +237,6 @@ body {
 .works-example-item {
 }
 .works-example-name {
-  font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
@@ -259,7 +244,6 @@ body {
   color: var(--text-color-main);
 }
 .works-example-type {
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.87;
