--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ body {
 }
 
 .order-btm {
+  font-family: inherit;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -117,10 +118,12 @@ body {
 }
 
 .type-of-works-buttons {
+  font-family: inherit;
   list-style: none;
 }
 
 .type-selection-btm {
+  font-family: inherit;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
