--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 }
 :root {
   --text-color-logo-dark: #000000;
-  --text-color-hover: #2196f3;
+  --text-color-hover: #188ce8;
   --shadow-color-grey: #e8e8e8;
   --text-color-main: #212121;
   --text-color-white: #ffffff;
@@ -18,7 +18,6 @@ body {
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-style: normal;
   font-size: 26px;
   text-decoration: none;
   color: var(--text-color-logo-dark);
@@ -38,7 +37,6 @@ body {
   list-style: none;
 }
 .menu-link {
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -53,7 +51,6 @@ body {
   color: var(--text-color-hover);
 }
 .current-page {
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -84,7 +81,6 @@ body {
 }
 
 .descisions {
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -97,17 +93,14 @@ body {
 
 .order-btm {
   font-family: inherit;
-  font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
-  display: flex;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   cursor: pointer;
   color: var(--text-color-white);
-  background: var(--text-color-hover);
+  background: var(--background-color-blue);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
@@ -124,7 +117,6 @@ body {
 
 .type-selection-btm {
   font-family: inherit;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -142,8 +134,7 @@ body {
   list-style: none;
 }
 .features-item {
-  font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -152,8 +143,7 @@ body {
   color: var(--text-color-main);
 }
 .detailed-features {
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -162,7 +152,7 @@ body {
 
 .what-we-do {
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
@@ -178,7 +168,7 @@ body {
 }
 .our-team {
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
@@ -200,7 +190,6 @@ body {
 }
 
 .team-member-name {
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -209,8 +198,7 @@ body {
   color: var(--text-color-main);
 }
 .team-member-position {
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.19px;
   text-align: center;
@@ -224,8 +212,7 @@ body {
 }
 .logo-futer {
   font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -235,7 +222,7 @@ body {
 
 .link-adress {
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -248,7 +235,7 @@ body {
 }
 .footer-contacts-item {
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -261,16 +248,14 @@ body {
 .works-example-item {
 }
 .works-example-name {
-  font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--text-color-main);
 }
 .works-example-type {
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
