--- a/css/styles.css
+++ b/css/styles.css
@@ -82,22 +82,40 @@ body {
 }
 
 .descisions {
+  background: var(--background-color-dark);
+  text-align: center;
+  width: 1600px;
+  height: 600px;
+  left: 0px;
+  top: 80px;
+}
+.descisions-title {
+  position: absolute;
+  width: 696px;
+  height: 120px;
+  left: 452px;
+  top: 280px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--text-color-white);
-  background: var(--background-color-dark);
 }
-
 .order-btm {
+  position: absolute;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.06em;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
-  text-align: center;
   letter-spacing: 0.06em;
   cursor: pointer;
   color: var(--text-color-white);
@@ -187,6 +205,7 @@ body {
 .team-member-item {
   width: 270px;
   height: 368px;
+  background: var(background-color-main);
 }
 
 .team-member-name {
@@ -228,6 +247,10 @@ body {
   text-decoration: none;
   color: var(--text-color-white);
 }
+.link-adress:hover,
+.link-adress:focus {
+  color: var(--text-color-hover);
+}
 
 .footer-contacts {
   list-style: none;
@@ -241,6 +264,11 @@ body {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
 }
+.footer-contacts-item:hover,
+.footer-contacts-item:focus {
+  color: var(--text-color-hover);
+}
+
 .works-example {
   list-style: none;
 }
