кнопки, ховер-фокус, тени

--- a/css/styles.css
+++ b/css/styles.css
@@ -142,11 +142,19 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-color-main);
+  border: none;
+  cursor: pointer;
 }
+.type-selection-btm-all {
+  color: var(--text-color-hover);
+}
+
 .type-selection-btm:hover,
 .type-selection-btm:focus {
   color: var(--text-color-white);
   background-color: var(--text-color-hover);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .features {
@@ -196,16 +204,15 @@ body {
 
 .team-members {
   list-style: none;
-  background: var(background-color-main);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
 }
 
 .team-member-item {
   width: 270px;
   height: 368px;
-  background: var(background-color-main);
+  background-color: var(background-color-main);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-member-name {
