--- a/css/styles.css
+++ b/css/styles.css
@@ -84,17 +84,8 @@ body {
 .descisions {
   background: var(--background-color-dark);
   text-align: center;
-  width: 1600px;
-  height: 600px;
-  left: 0px;
-  top: 80px;
 }
 .descisions-title {
-  position: absolute;
-  width: 696px;
-  height: 120px;
-  left: 452px;
-  top: 280px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -103,20 +94,12 @@ body {
   color: var(--text-color-white);
 }
 .order-btm {
-  position: absolute;
-  text-align: center;
-  width: 200px;
-  height: 50px;
-  left: 700px;
-  top: 430px;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.06em;
+  width: min-width;
+  padding: 10px 32px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
-  letter-spacing: 0.06em;
   cursor: pointer;
   color: var(--text-color-white);
   background: var(--background-color-blue);
@@ -125,7 +108,6 @@ body {
 }
 .order-btm:hover,
 .order-btm:focus {
-  color: var(--text-color-white);
   background-color: var(--text-color-hover);
 }
 
@@ -208,7 +190,8 @@ body {
 
 .team-member-item {
   width: 270px;
-  height: 368px;
+  margin: 0;
+
   background-color: var(background-color-main);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -225,12 +208,12 @@ body {
 }
 .team-member-position {
   font-size: 16px;
-  line-height: 1.19px;
+  line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-color-grey);
 }
-
+/* ================footer================*/
 .footer {
   text-decoration: none;
   background: var(--background-color-dark);
