--- a/css/styles.css
+++ b/css/styles.css
@@ -191,8 +191,7 @@ body {
 .team-member-item {
   width: 270px;
   margin: 0;
-
-  background-color: var(background-color-main);
+  background-color: var(--background-color-main);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
